feat: homePage.html

--- a/homePage.html
+++ b/homePage.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/home/selectedPage.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -27,11 +28,11 @@
             <a class="nav-item home-page-nav-item" title="Go back to the home page" href="homePage.html">
               Home
             </a>
-            <a class="nav-item about-me-nav-item">
+            <a class="nav-item about-me-nav-item" href="aboutMe.html">
               About me
             </a>
             <div class="nav-seperator"></div>
-            <a class="nav-item">
+            <a class="nav-item my-services-nav-item">
               My services
             </a>
             <a class="nav-item contact-me-nav-item">
@@ -46,10 +47,7 @@
 
       <div class="first-quote-and-image-container">
         <img class="first-quote-image" src="images/images/pexels-romanp-15382.jpg">
-        <div class="first-quote-container">
-        <p class="first-quote">Empower yourself</p>
-        <p class="first-quote">and unlock your TRUE potential</p>
-        <p class="first-quote">with Life Coach Sona</p>
+        <div class="first-quote-container js-first-quote-container">
       </div>
         <img class="coach-sona-img" src="images/images/WhatsApp Image 2025-09-03 at 9.40.31 PM.jpeg">
       </div>
@@ -68,8 +66,30 @@
       </div>
 
       <div class="purpose-of-life-coaching-container">
-        
+        <div class="purpose-of-life-coaching-content">
+          <img class="purpose-of-life-coaching-image" src="images/images/pexels-toulouse-10807430.jpg">
+          <p class="purpose-of-life-coaching-text">
+          The purpose of life coaching is to help individuals gain clarity about their goals, overcome obstacles, and create actionable plans to achieve personal or professional growth. A life coach provides support, accountability, and perspective, guiding clients through transitions, challenges, or periods of self-discovery.
+        </p>
+        </div>
       </div>
+
     </main>
+
+    <footer>
+      <div class="footer-content">
+      <div class="footer-text">
+      <p class="follow-me-text">Follow me</p>
+      <p class="follow-me-text-description">
+        Stay tuned for fresh insights, tips, and updates. connect with me on social media today!
+      </p>
+      <a class="footer-instagram-link" href="https://www.instagram.com/coachsonabakalian/" target="_blank">
+          <img class="instagram-icon" src="images/icons/instagram.svg">
+      </a>
+    </div>
+  </div>
+    </footer>
+
+    <script src="scripts/homePage.js"></script>
   </body>
 </html>
