feat: about Me page

--- a/homePage.html
+++ b/homePage.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life Coach Sona</title>
+    <link rel="icon" type="image/png" href=images/logo/coachSonaBakalianLogo-cropped-1.jpg>
+    <title>Life Coach Sona | Home</title>
     <link rel="stylesheet" href="styles/home/homePage.css">
     <link rel="stylesheet" href="styles/home/selectedPage.css">
     <link rel="stylesheet" href="styles/header.css">
