final touches before deployment

--- a/homePage.html
+++ b/homePage.html
@@ -33,7 +33,7 @@
   <body>
     <header class="header">
 
-      <div class="hamburger-menu js-hamburger-menu">
+      <div class="hamburger-menu js-hamburger-menu" data-aos="fade-in">
 
       </div>
       <div class="default-header-content js-default-header-content" data-aos="fade-in">
@@ -53,9 +53,9 @@
 
       <section class="life-coaching-introduction-container">
         <img class="logo" src="images/logo/coachSonaBakalianLogo-cropped-1.jpg" loading="lazy">
-        <img class="life-coaching-introduction-image" src="images/images/pexels-ninauhlikova-725255.jpg" loading="lazy" data-aos="fade-right">
+        <img class="life-coaching-introduction-image" src="images/images/pexels-serj-2577706.jpg" loading="lazy" data-aos="fade-right">
         <div class="life-coaching-introduction-text">
-        <p class="life-coaching-introduction-title" data-aos="fade-in" data-aos-delay="500" data-aos-offset="100">What is Life Coaching?</p>
+        <p class="life-coaching-introduction-title" data-aos="fade-in" data-aos-delay="500" data-aos-offset="200">What is Life Coaching?</p>
         <p class="life-coaching-introduction-description"  data-aos="fade-in" data-aos-delay="500" data-aos-offset="200">
           Life coaching is a collaborative and goal-focused process in which a trained professional called a life coach supports individuals in identifying and achieving personal or professional goals, enhancing self-awareness, and creating meaningful change in their lives. <details class="life-coaching-introduction-description" data-aos="fade-in" data-aos-delay="500"
           data-aos-offset="100">
@@ -67,10 +67,10 @@
       </div>
     </section>
 
-      <section class="purpose-of-life-coaching-container" data-aos="fade-right">
+      <section class="purpose-of-life-coaching-container" data-aos="fade-left">
         <div class="purpose-of-life-coaching-content">
           <img class="purpose-of-life-coaching-image" src="images/images/pexels-toulouse-10807430.jpg" loading="lazy">
-          <p class="purpose-of-life-coaching-text" data-aos="fade-left" data-aos-delay="300" data-aos-offset="140">
+          <p class="purpose-of-life-coaching-text" data-aos="fade-right" data-aos-delay="300" data-aos-offset="140">
           The purpose of life coaching is to help individuals gain clarity about their goals, overcome obstacles, and create actionable plans to achieve personal or professional growth. A life coach provides support, accountability, and perspective, guiding clients through transitions, challenges, or periods of self-discovery.
         </p>
         </div>
@@ -99,7 +99,7 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
-      offset: 200,
+      offset: 120,
       duration: 1500
     });
   </script>
