feat: URL paths

--- a/aboutMe/index.html
+++ b/aboutMe/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Coach Sona | About Me</title>
     <link rel="icon" type="image/png" href=images/logo/coachSonaBakalianLogo-cropped-1.jpg>
-    <link rel="stylesheet" href="styles/aboutMe/aboutMe.css">
-    <link rel="stylesheet" href="styles/aboutMe/selectedPageAboutMe.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/general.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="styles/contactMe/contactMe.css">
+    <link rel="stylesheet" href="../styles/aboutMe/aboutMe.css">
+    <link rel="stylesheet" href="../styles/aboutMe/selectedPageAboutMe.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/general.css">
+    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/contactMe/contactMe.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -47,7 +47,7 @@
         
 
         <div class="about-me-content">
-        <img class="coach-sona-image" src="images/images/IMG_4750.jpg" loading="eager" data-aos="fade-right">
+        <img class="coach-sona-image" src="../images/images/IMG_4750.jpg" loading="eager" data-aos="fade-right">
         <div class="about-me-text-container">
           <p class="about-me-text-title" data-aos="fade-down" data-aos-offset="20">Who am I?</p>
           <p class="about-me-text" data-aos="fade-left">
@@ -81,13 +81,13 @@
         Stay tuned for fresh insights, tips, and updates. connect with me on social media today!
       </p>
       <a class="footer-instagram-link" href="https://www.instagram.com/coachsonabakalian/" target="_blank">
-          <img class="instagram-icon" src="images/icons/instagram.svg" loading="lazy">
+          <img class="instagram-icon" src="../images/icons/instagram.svg" loading="lazy">
       </a>
     </div>
   </div>
     </footer>
 
-    <script src="scripts/aboutMe.js" type="module"></script>
+    <script src="../scripts/aboutMe.js" type="module"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
