changes to the url paths

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href=images/logo/coachSonaBakalianLogo-cropped-1.jpg>
+    <link rel="icon" type="image/png" href=/images/logo/coachSonaBakalianLogo-cropped-1.jpg>
     <title>Life Coach Sona | Home</title>
-    <link rel="stylesheet" href="styles/home/homePage.css">
-    <link rel="stylesheet" href="styles/home/selectedPage.css">
-    <link rel="stylesheet" href="styles/header.css">
-    <link rel="stylesheet" href="styles/general.css">
-    <link rel="stylesheet" href="styles/footer.css">
-    <link rel="stylesheet" href="styles/contactMe/contactMe.css">
+    <link rel="stylesheet" href="/styles/home/homePage.css">
+    <link rel="stylesheet" href="/styles/home/selectedPage.css">
+    <link rel="stylesheet" href="/styles/header.css">
+    <link rel="stylesheet" href="/styles/general.css">
+    <link rel="stylesheet" href="/styles/footer.css">
+    <link rel="stylesheet" href="/styles/contactMe/contactMe.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -45,15 +45,15 @@
     <main>
 
       <section class="first-quote-and-image-container">
-        <img class="first-quote-image" src="images/images/pexels-romanp-15382.jpg" loading="eager">
+        <img class="first-quote-image" src="/images/images/pexels-romanp-15382.jpg" loading="eager">
         <div class="first-quote-container js-first-quote-container">
       </div>
-        <img class="coach-sona-img" src="images/images/WhatsApp Image 2025-09-03 at 9.40.31 PM.jpeg" loading="eager">
+        <img class="coach-sona-img" src="/images/images/WhatsApp Image 2025-09-03 at 9.40.31 PM.jpeg" loading="eager">
     </section>
 
       <section class="life-coaching-introduction-container">
-        <img class="logo" src="images/logo/coachSonaBakalianLogo-cropped-1.jpg" loading="lazy">
-        <img class="life-coaching-introduction-image" src="images/images/pexels-serj-2577706.jpg" loading="lazy" data-aos="fade-right">
+        <img class="logo" src="/images/logo/coachSonaBakalianLogo-cropped-1.jpg" loading="lazy">
+        <img class="life-coaching-introduction-image" src="/images/images/pexels-serj-2577706.jpg" loading="lazy" data-aos="fade-right">
         <div class="life-coaching-introduction-text">
         <p class="life-coaching-introduction-title" data-aos="fade-in" data-aos-delay="500" data-aos-offset="200">What is Life Coaching?</p>
         <p class="life-coaching-introduction-description"  data-aos="fade-in" data-aos-delay="500" data-aos-offset="200">
@@ -69,7 +69,7 @@
 
       <section class="purpose-of-life-coaching-container" data-aos="fade-left">
         <div class="purpose-of-life-coaching-content">
-          <img class="purpose-of-life-coaching-image" src="images/images/pexels-toulouse-10807430.jpg" loading="lazy">
+          <img class="purpose-of-life-coaching-image" src="/images/images/pexels-toulouse-10807430.jpg" loading="eager">
           <p class="purpose-of-life-coaching-text" data-aos="fade-right" data-aos-delay="300" data-aos-offset="140">
           The purpose of life coaching is to help individuals gain clarity about their goals, overcome obstacles, and create actionable plans to achieve personal or professional growth. A life coach provides support, accountability, and perspective, guiding clients through transitions, challenges, or periods of self-discovery.
         </p>
@@ -89,13 +89,13 @@
         Stay tuned for fresh insights, tips, and updates. connect with me on social media today!
       </p>
       <a class="footer-instagram-link" href="https://www.instagram.com/coachsonabakalian/" target="_blank">
-          <img class="instagram-icon" src="images/icons/instagram.svg" loading="lazy">
+          <img class="instagram-icon" src="/images/icons/instagram.svg" loading="lazy">
       </a>
     </div>
   </div>
     </footer>
 
-    <script src="scripts/homePage.js" type="module"></script>
+    <script src="/scripts/homePage.js" type="module"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
     AOS.init({
