feat: fixes to the url paths

--- a/services/index.html
+++ b/services/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Coach Sona | Services</title>
     <link rel="icon" type="image/png" href="/images/logo/coachSonaBakalianLogo-cropped-1.jpg">
-    <link rel="stylesheet" href="/styles/services/services.css">
-    <link rel="stylesheet" href="/styles/services/selectedPageServices.css">
-    <link rel="stylesheet" href="/styles/header.css">
-    <link rel="stylesheet" href="/styles/general.css">
-    <link rel="stylesheet" href="/styles/services/servicesFooter.css">
-    <link rel="stylesheet" href="/styles/contactMe/contactMe.css">
+    <link rel="stylesheet" href="../styles/services/services.css">
+    <link rel="stylesheet" href="../styles/services/selectedPageServices.css">
+    <link rel="stylesheet" href="../styles/header.css">
+    <link rel="stylesheet" href="../styles/general.css">
+    <link rel="stylesheet" href="../styles/services/servicesFooter.css">
+    <link rel="stylesheet" href="../styles/contactMe/contactMe.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -54,7 +54,7 @@
 
         <div class="service" data-aos="fade-up">
       <div class=services-image-container>
-    <img src="/images/images/services/pexels-jeshoots-com-147458-714701.jpg" loading="eager">
+    <img src="../images/images/services/pexels-jeshoots-com-147458-714701.jpg" loading="eager">
     </div>
     <div class="service-text">
       <p class="service-title">Time Management</p>
@@ -65,7 +65,7 @@
 
     <div class="service" data-aos="fade-down">
       <div class=services-image-container>
-    <img src="/images/images/services/pexels-henri-mathieu-8348468.jpg" loading="eager">
+    <img src="../images/images/services/pexels-henri-mathieu-8348468.jpg" loading="eager">
     </div>
     <p class="service-title">Move with confidence</p>
       <p class="service-description">Life is full of challenges, by adopting a positive mindset we can navigate every challenge by confidence and become resilient.</p>
@@ -73,7 +73,7 @@
 
     <div class="service" data-aos="fade-up">
       <div class=services-image-container>
-    <img src="/images/images/services/pexels-enginakyurt-1552617.jpg" loading="eager">
+    <img src="../images/images/services/pexels-enginakyurt-1552617.jpg" loading="eager">
     </div>
     <p class="service-title">Setting smart goals</p>
       <p class="service-description">By setting smart goals, you will specify measurable, attainable, realistic, and timely goals that will keep you focused on your path and lead a desirable life by overcoming obstacles.</p>
@@ -81,7 +81,7 @@
 
     <div class="service" data-aos="fade-down">
       <div class=services-image-container>
-    <img src="/images/images/services/pexels-leandro-boogalu-5876-1390403.jpg" loading="eager">
+    <img src="../images/images/services/pexels-leandro-boogalu-5876-1390403.jpg" loading="eager">
     </div>
     <p class="service-title">Stay disciplined</p>
       <p class="service-description">As your life coach, I will help you build discipline by adopting consistant habits crucial for long term success.</p>
@@ -89,7 +89,7 @@
 
   <div class="service" data-aos="fade-up">
       <div class=services-image-container>
-    <img src="/images/images/services/pexels-prasanthinturi-1051838.jpg" loading="eager">
+    <img src="../images/images/services/pexels-prasanthinturi-1051838.jpg" loading="eager">
     </div>
     <p class="service-title">Stress management</p>
       <p class="service-description">By reducing anxiety levels, you'll regain control, enhance your emotional well being, and stay focused.</p>
@@ -97,7 +97,7 @@
 
   <div class="service" data-aos="fade-down">
       <div class=services-image-container>
-    <img src="/images/images/services/pexels-davyd-bortnik-1578556-3058762.jpg" loading="eager">
+    <img src="../images/images/services/pexels-davyd-bortnik-1578556-3058762.jpg" loading="eager">
     </div>
     <p class="service-title">Personal development</p>
       <p class="service-description">Together we can work on unleashing your higher self in order to achieve your full potentian in life.</p>
@@ -121,13 +121,13 @@
         Stay tuned for fresh insights, tips, and updates. connect with me on social media today!
       </p>
       <a class="footer-instagram-link" href="https://www.instagram.com/coachsonabakalian/" target="_blank">
-          <img class="instagram-icon" src="/images/icons/instagram.svg" loading="lazy">
+          <img class="instagram-icon" src="../images/icons/instagram.svg" loading="lazy">
       </a>
     </div>
   </div>
     </footer>
 
-    <script src="/scripts/services.js" type="module"></script>
+    <script src="../scripts/services.js" type="module"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
     AOS.init({
