feat1: improved animations, feat2: improved media queries

--- a/index.html
+++ b/index.html
@@ -53,24 +53,22 @@
 
       <section class="life-coaching-introduction-container">
         <img class="logo" src="images/logo/coachSonaBakalianLogo-cropped-1.jpg" loading="lazy">
-        <img class="life-coaching-introduction-image" src="images/images/pexels-serj-2577706.jpg" loading="lazy" data-aos="fade-right">
+        <img class="life-coaching-introduction-image" src="images/images/pexels-serj-2577706.jpg" loading="eager" data-aos="fade-right">
         <div class="life-coaching-introduction-text">
-        <p class="life-coaching-introduction-title" data-aos="fade-in" data-aos-delay="500" data-aos-offset="200">What is Life Coaching?</p>
-        <p class="life-coaching-introduction-description"  data-aos="fade-in" data-aos-delay="500" data-aos-offset="200">
-          Life coaching is a collaborative and goal-focused process in which a trained professional called a life coach supports individuals in identifying and achieving personal or professional goals, enhancing self-awareness, and creating meaningful change in their lives. <details class="life-coaching-introduction-description" data-aos="fade-in" data-aos-delay="500"
-          data-aos-offset="100">
-            <summary class="life-coaching-introduction-description">More info</summary  data-aos="fade-down">
-              <span class="life-coaching-introduction-description" data-aos="fade-in"
-          data-aos-offset="100">
+        <p class="life-coaching-introduction-title" data-aos="fade-in" data-aos-delay="300" data-aos-offset="120" data-aos-duration="1800">What is Life Coaching?</p>
+        <p class="life-coaching-introduction-description"  data-aos="fade-in" data-aos-delay="300" data-aos-offset="120" data-aos-duration="1800">
+          Life coaching is a collaborative and goal-focused process in which a trained professional called a life coach supports individuals in identifying and achieving personal or professional goals, enhancing self-awareness, and creating meaningful change in their lives. <details class="life-coaching-introduction-description">
+            <summary class="life-coaching-introduction-description" data-aos="fade-in" data-aos-delay="300" data-aos-offset="40" data-aos-duration="1800">More info</summary>
+              <span class="life-coaching-introduction-description">
             Unlike therapy, which often addresses emotional healing and mental health challenges rooted in the past, life coaching is future-oriented and centers on growth, action, and accountability. A life coach works with clients to clarify their vision, overcome limiting beliefs or habits, and develop concrete strategies for improvement in areas such as career, relationships, confidence, health, and overall life balance. While life coaches are not licensed therapists or medical professionals, their role is to serve as a motivational partner who empowers clients to unlock their potential and live with greater intention, purpose, and fulfillment.</span></details>
         </p>
       </div>
     </section>
 
-      <section class="purpose-of-life-coaching-container" data-aos="fade-left">
+      <section class="purpose-of-life-coaching-container">
         <div class="purpose-of-life-coaching-content">
           <img class="purpose-of-life-coaching-image" src="images/images/pexels-toulouse-10807430.jpg" loading="eager">
-          <p class="purpose-of-life-coaching-text" data-aos="fade-right" data-aos-delay="300" data-aos-offset="140">
+          <p class="purpose-of-life-coaching-text" data-aos="fade-right" data-aos-delay="300" data-aos-offset="240">
           The purpose of life coaching is to help individuals gain clarity about their goals, overcome obstacles, and create actionable plans to achieve personal or professional growth. A life coach provides support, accountability, and perspective, guiding clients through transitions, challenges, or periods of self-discovery.
         </p>
         </div>
