--- a/services/index.html
+++ b/services/index.html
@@ -52,7 +52,7 @@
       <div class="services-container">
         <div class="services-grid">
 
-        <div class="service" data-aos="fade-up">
+        <div class="service" data-aos="fade-in">
       <div class=services-image-container>
     <img src="../images/images/services/pexels-jeshoots-com-147458-714701.jpg" loading="eager">
     </div>
@@ -63,44 +63,54 @@
     </div>
   </div>
 
-    <div class="service" data-aos="fade-down">
+    <div class="service" data-aos="fade-in">
       <div class=services-image-container>
     <img src="../images/images/services/pexels-henri-mathieu-8348468.jpg" loading="eager">
     </div>
+    <div class="service-text">
     <p class="service-title">Move with confidence</p>
       <p class="service-description">Life is full of challenges, by adopting a positive mindset we can navigate every challenge by confidence and become resilient.</p>
+    </div>
   </div>
 
-    <div class="service" data-aos="fade-up">
+    <div class="service" data-aos="fade-in">
       <div class=services-image-container>
     <img src="../images/images/services/pexels-enginakyurt-1552617.jpg" loading="eager">
     </div>
+    <div class="service-text">
     <p class="service-title">Setting smart goals</p>
       <p class="service-description">By setting smart goals, you will specify measurable, attainable, realistic, and timely goals that will keep you focused on your path and lead a desirable life by overcoming obstacles.</p>
     </div>
+    </div>
 
-    <div class="service" data-aos="fade-down">
+    <div class="service" data-aos="fade-in">
       <div class=services-image-container>
     <img src="../images/images/services/pexels-leandro-boogalu-5876-1390403.jpg" loading="eager">
     </div>
+    <div class="service-text">
     <p class="service-title">Stay disciplined</p>
       <p class="service-description">As your life coach, I will help you build discipline by adopting consistant habits crucial for long term success.</p>
+    </div>
   </div>
 
-  <div class="service" data-aos="fade-up">
+  <div class="service" data-aos="fade-in">
       <div class=services-image-container>
     <img src="../images/images/services/pexels-prasanthinturi-1051838.jpg" loading="eager">
     </div>
+    <div class="service-text">
     <p class="service-title">Stress management</p>
       <p class="service-description">By reducing anxiety levels, you'll regain control, enhance your emotional well being, and stay focused.</p>
+    </div>
   </div>
 
-  <div class="service" data-aos="fade-down">
+  <div class="service" data-aos="fade-in">
       <div class=services-image-container>
     <img src="../images/images/services/pexels-davyd-bortnik-1578556-3058762.jpg" loading="eager">
     </div>
+    <div class="service-text">
     <p class="service-title">Personal development</p>
       <p class="service-description">Together we can work on unleashing your higher self in order to achieve your full potentian in life.</p>
+    </div>
   </div>
 
 
@@ -131,8 +141,9 @@
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
     AOS.init({
-      offset: 200,
+      offset: 20,
       duration: 1900,
+      delay: 50
     });
   </script>
   </body>
