feat: optimize images for faster load times and make some small fixes

--- a/aboutMe/index.html
+++ b/aboutMe/index.html
@@ -47,7 +47,7 @@
         
 
         <div class="about-me-content">
-        <img class="coach-sona-image" src="../images/images/IMG_4750.jpg" loading="eager" data-aos="fade-right">
+        <img class="coach-sona-image" src="../images/images/IMG_4750-comp.webp" loading="eager" data-aos="fade-right">
         <div class="about-me-text-container">
           <p class="about-me-text-title" data-aos="fade-down" data-aos-offset="20">Who am I?</p>
           <p class="about-me-text" data-aos="fade-left">
