--- a/services/index.html
+++ b/services/index.html
@@ -54,7 +54,7 @@
 
         <div class="service" data-aos="fade-in">
       <div class=services-image-container>
-    <img src="../images/images/services/pexels-jeshoots-com-147458-714701.jpg" loading="eager">
+    <img src="../images/images/services/pexels-jeshoots-com-147458-714701-comp.webp" loading="eager">
     </div>
     <div class="service-text">
       <p class="service-title">Time Management</p>
@@ -65,7 +65,7 @@
 
     <div class="service" data-aos="fade-in">
       <div class=services-image-container>
-    <img src="../images/images/services/pexels-henri-mathieu-8348468.jpg" loading="eager">
+    <img src="../images/images/services/pexels-henri-mathieu-8348468-comp.webp" loading="eager">
     </div>
     <div class="service-text">
     <p class="service-title">Move with confidence</p>
@@ -75,7 +75,7 @@
 
     <div class="service" data-aos="fade-in">
       <div class=services-image-container>
-    <img src="../images/images/services/pexels-enginakyurt-1552617.jpg" loading="eager">
+    <img src="../images/images/services/pexels-enginakyurt-1552617-comp.webp" loading="lazy">
     </div>
     <div class="service-text">
     <p class="service-title">Setting smart goals</p>
@@ -85,7 +85,7 @@
 
     <div class="service" data-aos="fade-in">
       <div class=services-image-container>
-    <img src="../images/images/services/pexels-leandro-boogalu-5876-1390403.jpg" loading="eager">
+    <img src="../images/images/services/pexels-leandro-boogalu-5876-1390403-comp.webp" loading="lazy">
     </div>
     <div class="service-text">
     <p class="service-title">Stay disciplined</p>
@@ -95,7 +95,7 @@
 
   <div class="service" data-aos="fade-in">
       <div class=services-image-container>
-    <img src="../images/images/services/pexels-prasanthinturi-1051838.jpg" loading="eager">
+    <img src="../images/images/services/pexels-prasanthinturi-1051838-comp.webp" loading="lazy">
     </div>
     <div class="service-text">
     <p class="service-title">Stress management</p>
@@ -105,7 +105,7 @@
 
   <div class="service" data-aos="fade-in">
       <div class=services-image-container>
-    <img src="../images/images/services/pexels-davyd-bortnik-1578556-3058762.jpg" loading="eager">
+    <img src="../images/images/services/pexels-davyd-bortnik-1578556-3058762-comp.webp" loading="lazy">
     </div>
     <div class="service-text">
     <p class="service-title">Personal development</p>
